--- a/cafe-sync/src/fran/components/common.css
+++ b/cafe-sync/src/fran/components/common.css
@@ -138,6 +138,17 @@
     -6px 0px 12px rgba(0, 0, 0, 0.05);
 }
 
+/* ✅ 메인 화면 스타일 */
+.grid-layout {
+  width: 1820px;
+  height: 880px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 20px;
+  padding: 20px;
+}
+
 /* ✅ 페이지 헤더 스타일 */
 .page-header {
   width: 100%;
