--- a/cafe-sync/src/fran/pages/menus/Menus.module.css
+++ b/cafe-sync/src/fran/pages/menus/Menus.module.css
@@ -13,7 +13,7 @@
 /* 버튼 기본 스타일 */
 .menuBtn {
     /* 내부 여백 */
-    padding: 10px 30px;
+    padding: 5px 30px;
     /* 글씨 크기 */
     font-size: 15px;
     /* 회색 테두리 */
@@ -22,6 +22,7 @@
     background-color: white;
     /* 검은색 글씨 */
     color: rgb(41, 41, 41);
+    font-weight: bold;
     /* 둥근 모서리 */
     border-radius: 8px;
     /* 마우스 올릴 때 포인터 표시 */
@@ -31,11 +32,14 @@
 /* 선택 된 버튼 스타일 */
 .menuBtnActive {
     /* 내부 여백 */
-    padding: 10px 30px;
+    padding: 8px 30px;
     /* 보라색 배경 */
     background-color: #5B0A47;
     /* 흰색 글씨 */
     color: white;
+    /* 글씨 크기 */
+    font-size: 15px;
+    font-weight: bold;
     /* 테두리 제거 */
     border: none;
     /* 둥근 모서리 */
@@ -98,4 +102,20 @@
     border-radius: 3px;
     /* 버튼 내부 여백 (위아래 3px, 좌우 20px) */
     padding: 3px 20px;
+}
+
+/* ------------------------------------------- */
+/* 메뉴 사진 */
+.menuIcon {
+    width: 350px;
+    height: auto;
+}
+
+/* 카테고리 선택 시 위에 뜨는 폰트 */
+.categoryContent {
+    /* 글씨 크기 */
+    color: rgb(60, 60, 60);
+    font-size: 25px;
+    font-weight: bold;
+    margin-left: 100px;
 }
