--- a/cafe-sync/src/home/pages/login/Login.css
+++ b/cafe-sync/src/home/pages/login/Login.css
@@ -18,7 +18,6 @@
 .input-group {
   gap: 10px;
   position: relative;
-  left: 10%;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -41,6 +40,13 @@
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  outline: none; /* 기본 포커스 스타일 제거 */
+  transition: border 0.3s ease-in-out;
+}
+
+.login-form input:focus {
+  border: 1px solid rgba(99, 8, 72, 1); /* 원하는 색상으로 변경 */
+  box-shadow: 0 0 5px rgba(109, 27, 80, 0.5); /* 부드러운 테두리 효과 */
 }
 
 /* 버튼 스타일 */
@@ -64,10 +70,9 @@
 /* 아이디 저장 & 찾기 컨테이너 */
 .container {
   position: relative;
-  left: 10%;
   width: 100%;
   display: flex;
-  gap: 23%;
+  gap: 29%;
   align-items: center;
   font-size: 14px;
   color: #777;
