--- a/cafe-sync/src/home/pages/find-pass/FindPass.module.css
+++ b/cafe-sync/src/home/pages/find-pass/FindPass.module.css
@@ -16,7 +16,7 @@
 .container {
   position: relative;
   left: 10%;
-  margin-top: 10%;
+  margin-top: 7%;
   width: 400px;
   height: auto; /* 높이 자동 조정 */
   padding: 20px;
@@ -97,6 +97,7 @@
   min-width: 100px; /* 버튼 최소 너비 */
   padding: 10px 15px;
   border: 2px solid #6d1b50; /* 테두리 추가 */
+  background-color: #6d1b50;
   border-radius: 10px; /* 둥근 모서리 */
   font-size: 14px;
   font-weight: bold;
@@ -105,6 +106,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  color: white;
+}
+
+.button:hover {
+  background-color: #4e1437;
 }
 
 /* ✅ 검색 버튼 (진한 와인색) */
@@ -129,14 +135,25 @@
 
 /* ✅ 취소 버튼 (하얀색 배경, 보라색 테두리) */
 .cancelButton {
-  background-color: white;
-  color: #6d1b50;
+  background-color: #6d1b50;
+  color: white;
 }
 
 .cancelButton:hover {
-  background-color: #f2f2f2;
+  background-color: #4e1437;
 }
 
 .selectButton {
   text-decoration: none;
+}
+
+.timer {
+  position: absolute;
+  left: 18px; /* 왼쪽 정렬 */
+  bottom: -20px; /* 인증번호 인풋박스 아래로 위치 */
+  font-size: 14px;
+  color: #555;
+  display: flex;
+  align-items: center;
+  top: 89%;
 }
