--- a/cafe-sync/src/fran/pages/employee/styles/FullCalendar.module.css
+++ b/cafe-sync/src/fran/pages/employee/styles/FullCalendar.module.css
@@ -117,12 +117,11 @@
 :global(.division-1) {
     /* 오픈 */ 
     background-color: #BDC0F1; 
-    color: black; 
-    
+    color: black !important;
 } 
-:global(.division-2) { background-color: #F1E7BD; color: black; } /* 미들 */
-:global(.division-3) { background-color: #F1BDBD; color: black; } /* 마감 */
-:global(.division-4) { background-color: #C9F1BD; color: black; } /* 휴가 */
+:global(.division-2) { background-color: #F1E7BD; color: black !important; } /* 미들 */
+:global(.division-3) { background-color: #F1BDBD; color: black !important; } /* 마감 */
+:global(.division-4) { background-color: #C9F1BD; color: black !important; } /* 휴가 */
 :global(.fc-dayGridMonth-view .custom-event-month) { 
     display: flex;
     align-items: center;
