[25.02.20] 가맹점 이미지삽입

--- a/cafe-sync/src/fran/pages/menus/itemList/MenuList.module.css
+++ b/cafe-sync/src/fran/pages/menus/itemList/MenuList.module.css
@@ -107,3 +107,11 @@
     z-index: 2;
     /* 다른 요소 위에 표시 */
 }
+
+.noResult {
+    display: flex;
+
+    height: 30pc;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
