--- a/cafe-sync/src/fran/pages/inventory/Orders.module.css
+++ b/cafe-sync/src/fran/pages/inventory/Orders.module.css
@@ -79,6 +79,16 @@
   margin-left: auto;
 }
 
+.deleteOrder {
+  padding: 8px 15px;
+  background-color: #ff0000;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: auto;
+}
+
 .dateInput {
   padding: 8px;
   border: 1px solid #aaa;
@@ -92,6 +102,7 @@
 .detailTable {
   width: 100%;
   border-collapse: collapse;
+  table-layout: fixed;
 }
 
 .orderTable th,
@@ -122,7 +133,7 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
-  padding-bottom: 18px;
+  padding-bottom: 25px;
   margin-top: auto;
 }
 
@@ -199,6 +210,13 @@
 
 /* 버튼 그룹 */
 .buttonGroup {
+  display: flex;
+  gap: 10px;
+}
+
+.buttonGroup2 {
+  position: relative;
+  left: 19%;
   display: flex;
   gap: 10px;
 }
