[25-02-24] 공지사항 상세페이지 파일이름나오게만

--- a/cafe-sync/src/fran/pages/barista-note/NoteRegist.module.css
+++ b/cafe-sync/src/fran/pages/barista-note/NoteRegist.module.css
@@ -153,3 +153,9 @@ input {
     border:1px solid #ccc;
     border-radius: 5px;    
 }
+
+.attachment{
+    border:1px solid #ccc;
+    border-radius: 5px; 
+    
+}
