[25.02.24] 세금계산서 조회 기능 구현

--- a/cafe-sync/src/home/pages/login/Login.css
+++ b/cafe-sync/src/home/pages/login/Login.css
@@ -31,6 +31,7 @@
   font-size: 14px;
   font-weight: bold;
   margin-bottom: 5px;
+  width: 75px;
 }
 
 /* 입력 필드 스타일 */
@@ -106,6 +107,7 @@
   text-decoration: none;
   color: #777;
   font-size: 14px;
+  width: 89px;
 }
 
 .find-box a:hover {
