--- a/cafe-sync/src/fran/pages/employee/styles/ScheduleAdd.module.css
+++ b/cafe-sync/src/fran/pages/employee/styles/ScheduleAdd.module.css
@@ -2,6 +2,14 @@
     font-size: 25px;
 }
 
+.spanH3 {
+    font-size: 20px;
+    font-weight: bold;
+    display: inline-block;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
 .addContainer {
     max-height: 530px;
     height: 530px;
