[25.02.24] 가맹점 삭제

--- a/cafe-sync/src/hq/pages/mgment/itemList/FranList.module.css
+++ b/cafe-sync/src/hq/pages/mgment/itemList/FranList.module.css
@@ -191,7 +191,8 @@
     background-color: #f5f0f7;
     /* 연한 보라/핑크 톤 */
     padding: 0.5rem 1rem;
-    margin-bottom: 3rem;
+    margin-top: 10px;
+    margin-bottom: 2rem;
     border-radius: 4px;
 }
 
