--- a/cafe-sync/src/hq/pages/mgment/itemList/FranRegist.module.css
+++ b/cafe-sync/src/hq/pages/mgment/itemList/FranRegist.module.css
@@ -4,14 +4,13 @@
     padding: 20px;
     background: white;
     border-radius: 8px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 .title {
     text-align: center;
     font-size: 22px;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 35px;
 }
 
 .form {
@@ -33,10 +32,11 @@
 
 .formGroup input,
 .formGroup textarea {
-    width: 60%;
-    padding: 8px;
+    width: 70%;
+    padding: 1px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    height: 30px;
 }
 
 .formGroup textarea {
@@ -47,7 +47,7 @@
     display: flex;
     justify-content: center;
     gap: 10px;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 .submitButton {
