[25.02.25] 메뉴 조회 페이지 수정

--- a/cafe-sync/src/hq/pages/mgment/itemList/FranList.module.css
+++ b/cafe-sync/src/hq/pages/mgment/itemList/FranList.module.css
@@ -257,3 +257,11 @@
     font-weight: 600;
     margin-right: 0.5rem;
 }
+
+.deleteFran {
+    color: #a41313;
+    font-size: larger;
+    font-weight: 600;
+    margin-top: 70px;
+    text-align: center;
+}
