--- a/cafe-sync/src/fran/pages/barista-note/NoteRegist.module.css
+++ b/cafe-sync/src/fran/pages/barista-note/NoteRegist.module.css
@@ -160,11 +160,6 @@ input {
     border-radius: 5px;    
 }
 
-.attachment{
-    border:1px solid #ccc;
-    border-radius: 5px;
-}
-
 .registFile{
     border-radius: 5px;
 }
@@ -172,3 +167,19 @@ input {
 .registFile{
     width : 100%
 }
+
+.closeButton {
+    position: absolute; /* 부모 요소에 대해 절대 위치 설정 */
+    top: 10px; /* 상단에서 10px 떨어지게 설정 */
+    right: 15px; /* 오른쪽에서 10px 떨어지게 설정 */
+    font-size: 24px; /* 버튼 크기 */
+    color: #333; /* 버튼 색상 */
+    cursor: pointer;
+}
+
+/* 닫기 버튼 호버 효과 */
+.closeButton:hover {
+    color: #f44336; /* hover 시 빨간색으로 변환 */
+}
+
+
